# brat

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.brat/: .gitignore  config.toml
.brat/notes/: api-cli.md  api-convoycreateargs.md  api-initargs.md  api-statusargs.md  api-taskcreateargs.md  api-taskdepaddargs.md  api-taskdeplistargs.md  api-taskdepremoveargs.md  api-taskdeptopoargs.md  api-taskupdateargs.md  brat.md  component-src.md  system-architecture.md
brat-ui/: package-lock.json
brat-ui/src/api/: brat.ts
brat-ui/src/components/layout/: Sidebar.vue
brat-ui/src/router/: index.ts
brat-ui/src/types/: brat.ts
brat-ui/src/views/: Bootstrap.vue  Consistency.vue  Kb.vue  Meta.vue  Pipeline.vue  Review.vue
crates/brat/: Cargo.toml
crates/brat-mcp/: Cargo.toml
crates/brat-mcp/src/: main.rs  tools.rs
crates/brat-skills/: Cargo.toml
crates/brat-skills/skills/brat-architecture/: SKILL.md
crates/brat-skills/skills/brat-bootstrap/: SKILL.md
crates/brat-skills/skills/brat-implementation/: SKILL.md
crates/brat-skills/skills/brat-memory/: SKILL.md
crates/brat-skills/skills/brat-product/: SKILL.md
crates/brat-skills/skills/brat-review/: SKILL.md
crates/brat-skills/src/: lib.rs
crates/brat/src/: cli.rs  context.rs  error.rs  main.rs
crates/brat/src/api/: mod.rs  server.rs  state.rs  watcher.rs
crates/brat/src/api/routes/: bootstrap.rs  kb.rs  meta.rs  mod.rs  pipeline.rs  repos.rs  review.rs  sessions.rs  status.rs  tasks.rs
crates/brat/src/commands/: bootstrap.rs  init.rs  kb.rs  mcp.rs  meta.rs  mod.rs  session.rs  skill.rs  status.rs  task.rs
crates/brat/src/workflows/: error.rs  locks.rs  reconcile.rs  refinery.rs  witness.rs
crates/libbrat-config/src/: config.rs  lib.rs
crates/libbrat-engine/: Cargo.toml
crates/libbrat-engine/src/: bootstrap.rs  consistency.rs  infer_architecture.rs  infer_product.rs  lib.rs  meta.rs  scan.rs
crates/libbrat-grite/src/: lib.rs
crates/libbrat-kb/: Cargo.toml
crates/libbrat-kb/src/: architecture.rs  consistency.rs  error.rs  health.rs  lib.rs  memory.rs  product.rs  tenant.rs
crates/libbrat-lib/: Cargo.toml
crates/libbrat-lib/src/: lib.rs
crates/libbrat-session/src/: error.rs  event.rs  handle.rs  monitor.rs
crates/libbrat-swimlane/: Cargo.toml
crates/libbrat-swimlane/src/: error.rs  lane.rs  lib.rs  scheduler.rs
crates/libbrat-workflow/src/: error.rs  executor.rs
docs/: agent-playbook.md  architecture.md  canonical-spec.md  roles.md  state-machine.md
documentation/: mkdocs.yml
packaging/npm/: README.md  package.json
packaging/pip/: README.md  pyproject.toml
