[workspace]
resolver = "2"
members = [
    "crates/libbrat-engine",
    "crates/libbrat-config",
    "crates/libbrat-grite",
    "crates/libbrat-worktree",
    "crates/libbrat-session",
    "crates/libbrat-workflow",
    "crates/libbrat-kb",
    "crates/libbrat-swimlane",
    "crates/libbrat-lib",
    "crates/brat-skills",
    "crates/brat-mcp",
    "crates/brat",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"
repository = "https://github.com/neul-labs/brat"
homepage = "https://github.com/neul-labs/brat"
documentation = "https://docs.neullabs.com/brat"
keywords = ["ai", "agents", "cli", "automation", "coding"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "process"] }
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
libc = "0.2"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
nix = { version = "0.29", features = ["signal"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
serde_yaml = "0.9"
futures-util = "0.3"
notify = "6.1"

# External knowledge base
zkb-lib = { path = "../zkb/crates/zkb-lib" }

# MCP
rmcp = { version = "1.5", features = ["server", "macros", "transport-io"] }
schemars = "1.0"
rust-embed = "8.0"

# Internal crates
libbrat-engine = { version = "0.1.0", path = "crates/libbrat-engine" }
libbrat-config = { version = "0.1.0", path = "crates/libbrat-config" }
libbrat-grite = { version = "0.1.0", path = "crates/libbrat-grite" }
libbrat-worktree = { version = "0.1.0", path = "crates/libbrat-worktree" }
libbrat-session = { version = "0.1.0", path = "crates/libbrat-session" }
libbrat-workflow = { version = "0.1.0", path = "crates/libbrat-workflow" }
libbrat-kb = { version = "0.1.0", path = "crates/libbrat-kb" }
libbrat-swimlane = { version = "0.1.0", path = "crates/libbrat-swimlane" }
libbrat-lib = { version = "0.1.0", path = "crates/libbrat-lib" }
brat-skills = { version = "0.1.0", path = "crates/brat-skills" }
brat-mcp = { version = "0.1.0", path = "crates/brat-mcp" }
