[package]
name = "brat-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1"
libbrat-kb = { workspace = true }
libbrat-engine = { workspace = true }
