[package]
name = "brat"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Multi-agent harness for orchestrating AI coding tools"
readme = "../../README.md"

[[bin]]
name = "brat"
path = "src/main.rs"

[[bin]]
name = "bratd"
path = "src/bin/bratd.rs"

[dependencies]
libbrat-config.workspace = true
libbrat-engine.workspace = true
libbrat-grite.workspace = true
libbrat-worktree.workspace = true
libbrat-session.workspace = true
libbrat-workflow.workspace = true
libbrat-kb.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
base64.workspace = true
futures-util.workspace = true
reqwest = { version = "0.11", features = ["blocking", "json"] }
dirs = "5"
libc = "0.2"
notify = { workspace = true }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
serde = { workspace = true }

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
