[package]
name = "libbrat-kb"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.85"
repository = "https://github.com/neul-labs/brat"
description = "Brat knowledge base integration via zkb-lib"

[dependencies]
zkb-lib = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
full = ["zkb-lib/full"]
